--- a/src/public/css/styles.css
+++ b/src/public/css/styles.css
@@ -1,4 +1,9 @@
-#form-error,
-#form-success {
+#form-sucess,
+#form-error {
+  display: none;
+}
+
+#page-success,
+#page-error {
   display: none;
 }
